CHange to ritual